--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,17 +12,17 @@
     <button class="hamburger" (click)="toggleMenu()">☰</button>
 
     <ul class="user-links" [class.open]="menuOpen">
-      <ng-container *ngIf="true">
+      <ng-container *ngIf="!userService.isLoggedIn()">
         <li><a routerLink="/login">Iniciar Sesión</a></li>
-        <li><a routerLink="/new-user">Crear Usuario</a></li>
+        <li><a routerLink="/crear-usuario">Crear Usuario</a></li>
       </ng-container>
-      <ng-container *ngIf="true">
+      <ng-container *ngIf="userService.isLoggedIn()">
         <li><a routerLink="/mis-personajes">Mis Personajes</a></li>
-        <li *ngIf="true"><a routerLink="/usuarios">Usuarios</a></li>
+        <li *ngIf="userService.isAdmin()"><a routerLink="/usuarios">Usuarios</a></li>
         <li class="arena-link" *ngIf="true">
           <a routerLink="/arena">⚔️Arena⚔️</a>
         </li>
-        <li><a href="#" (click)="logout()">Cerrar Sesión</a></li>
+        <li><a href="/" (click)="logout()">Cerrar Sesión</a></li>
       </ng-container>
     </ul>
   </div>
